[package]
name = "frost_byte"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitcoin-ipc = { git = "https://github.com/bitcoin-dev-tools/bitcoin-ipc.git", branch = "main" }
capnp = "0.19.3"
capnp-rpc = "0.19.0"
clap = { version = "4.5.13", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.28.0"
egui = "0.28.0"
lazy_static = "1.4.0"
nix = { version = "0.29.0", features = ["signal", "process"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "process", "full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
